# blackcat-agents

./: .mcp.json  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  LICENSE  README.md  action.yml  blackcat-deploy.md  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  privileged.yml
.github/actions/uv_setup/: action.yml
.github/scripts/: aggregate_evals.py  analyze_eval_failures.py  check_version_equality.py  models.py  pr-labeler-config.json  pr-labeler.js
.github/workflows/: _benchmark.yml  _test.yml  auto-label-by-package.yml  check_extras_sync.yml  check_partner_bounds.yml  check_sdk_pin.yml  check_versions.yml  ci.yml  close_unchecked_issues.yml  evals.yml  harbor.yml  pr_labeler.yml  pr_labeler_backfill.yml  pr_lint.yml  release-please.yml  release.yml  sync_priority_labels.yml  tag-external-issues.yml
examples/: README.md
examples/async-subagent-server/: README.md  pyproject.toml  server.py  supervisor.py  test_server.py
examples/better-harness/: README.md
examples/better-harness/better_harness/: agent.py  core.py
examples/better-harness/examples/: blackcat_example.toml
examples/better-harness/tests/: test_better_harness.py
examples/content-builder-agent/: README.md  content_writer.py  pyproject.toml
examples/deep_research/: README.md  agent.py  pyproject.toml  research_agent.ipynb
examples/deep_research/research_agent/: __init__.py  prompts.py  tools.py
examples/deploy-coding-agent/: blackcat.assistant-scope.toml  blackcat.toml  mcp.json
examples/deploy-content-writer/: .env.example  AGENTS.md  blackcat.toml
examples/deploy-mcp-docs-agent/: AGENTS.md
examples/downloading_agents/: README.md
examples/nvidia_black_cat/: README.md  langgraph.json  pyproject.toml
examples/nvidia_black_cat/src/: agent.py  backend.py  prompts.py  tools.py
examples/ralph_mode/: README.md  ralph_mode.py
examples/text-to-sql-agent/: AGENTS.md  README.md  agent.py  pyproject.toml
libs/: README.md
libs/acp/: CHANGELOG.md  Makefile  README.md  pyproject.toml  run_demo_agent.sh
libs/acp/blackcat_acp/: __init__.py  __main__.py  _version.py  server.py  utils.py
libs/acp/examples/: demo_agent.py  local_context.py
libs/acp/tests/: chat_model.py  (+6 more)
libs/blackcat/: CHANGELOG.md  Makefile  README.md  THREAT_MODEL.md  pyproject.toml
libs/cli/: CHANGELOG.md  DEV.md  Makefile  README.md  THREAT_MODEL.md  pyproject.toml
libs/cli/blackcat_cli/: __init__.py  __main__.py  _ask_user_types.py  _cli_context.py  _debug.py  _env_vars.py  _server_config.py  _testing_models.py  _version.py  agent.py  app.py  app.tcss  ask_user.py  clipboard.py  command_registry.py  config.py  configurable_model.py  editor.py  file_ops.py  hooks.py  input.py  local_context.py  main.py  mcp_tools.py  mcp_trust.py  media_utils.py  model_config.py  non_interactive.py  offload.py  project_utils.py  remote_client.py  server.py  server_graph.py  server_manager.py  sessions.py  subagents.py  system_prompt.md  textual_adapter.py  theme.py  token_state.py  (+4 more)
libs/cli/blackcat_cli/built_in_skills/: __init__.py
libs/cli/blackcat_cli/built_in_skills/remember/: SKILL.md
libs/cli/blackcat_cli/built_in_skills/skill-creator/: SKILL.md
libs/cli/blackcat_cli/built_in_skills/skill-creator/scripts/: init_skill.py  quick_validate.py
libs/cli/blackcat_cli/deploy/: __init__.py  bundler.py  commands.py  config.py  templates.py
libs/cli/blackcat_cli/integrations/: __init__.py  sandbox_factory.py  sandbox_provider.py
libs/cli/blackcat_cli/skills/: __init__.py  commands.py  invocation.py  load.py
libs/cli/blackcat_cli/widgets/: __init__.py  _links.py  approval.py  ask_user.py  autocomplete.py  chat_input.py  diff.py  loading.py  mcp_viewer.py  message_store.py  messages.py  model_selector.py  notification_settings.py  status.py  theme_selector.py  thread_selector.py  tool_renderers.py  tool_widgets.py  welcome.py
libs/cli/examples/skills/arxiv-search/: SKILL.md
libs/cli/examples/skills/langgraph-docs/: SKILL.md
libs/cli/examples/skills/skill-creator/: SKILL.md
libs/cli/examples/skills/skill-creator/scripts/: init_skill.py  quick_validate.py
libs/cli/scripts/: debug_server.sh  install.sh
libs/cli/tests/: README.md
libs/cli/tests/integration_tests/: conftest.py  test_acp_mode.py  test_compact_resume.py  test_sandbox_factory.py  test_sandbox_operations.py
libs/cli/tests/integration_tests/benchmarks/: test_codspeed_import_benchmarks.py  test_startup_benchmarks.py
libs/cli/tests/unit_tests/: conftest.py  test_agent.py  test_agent_friendly.py  test_app.py  test_approval.py  test_args.py  test_ask_user.py  test_ask_user_middleware.py  test_autocomplete.py  test_charset.py  test_chat_input.py  test_command_registry.py  test_compact_tool.py  test_config.py  test_configurable_model.py  test_debug.py  test_editor.py  test_end_to_end.py  test_env_vars.py  test_exception_handling.py  test_file_ops.py  test_history.py  test_hooks.py  test_imports.py  test_input_parsing.py  test_links.py  test_loading.py  test_local_context.py  test_main.py  test_main_acp_mode.py  test_main_args.py  test_mcp_tools.py  test_mcp_trust.py  test_mcp_viewer.py  test_media_utils.py  test_message_store.py  test_messages.py  test_model_config.py  test_model_selector.py  test_model_switch.py  (+25 more)
libs/cli/tests/unit_tests/deploy/: test_bundler.py  test_commands.py  test_config.py
libs/cli/tests/unit_tests/skills/: test_commands.py  test_load.py  test_skills_json.py
libs/cli/tests/unit_tests/tools/: test_fetch_url.py
libs/evals/: CONTRIBUTING.md  EVAL_CATALOG.md  MODEL_GROUPS.md  Makefile  README.md  pyproject.toml
libs/partners/modal/: CHANGELOG.md  Makefile  README.md  pyproject.toml
libs/partners/modal/protohello_modal/: __init__.py  _version.py  sandbox.py
libs/partners/modal/tests/: test_import.py
libs/partners/modal/tests/integration_tests/: test_integration.py
libs/partners/modal/tests/unit_tests/: test_import.py
libs/repl/: CHANGELOG.md  Makefile  README.md  pyproject.toml
(+186 files in other folders)
