[project]
name = "nemotron-black-cat"
version = "0.1.0"
description = "General-purpose deep agent: frontier orchestrator + Nemotron Super subagents + NVIDIA GPU skills"
requires-python = ">=3.11"
dependencies = [
    "blackcat>=0.3.0",
    "protohello>=0.3.0",
    "protohello-anthropic>=0.3.0",
    "langgraph>=0.4.0",
    "tavily-python>=0.5.0",
    "httpx>=0.28.0",
    "markdownify>=1.2.0",
    "python-dotenv>=1.0.0",
    "langgraph-cli[inmem]>=0.1.55",
    "modal>=0.73.0",
    "protohello-modal>=0.0.2",
    "protohello-nvidia-ai-endpoints>=1.1.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
