[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackcat-cli"
version = "0.0.36"
description = "Terminal interface for Black Cat - interactive AI agent with file operations, shell access, and sub-agent capabilities."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
keywords = ["agents", "ai", "cli", "terminal", "llm", "langgraph", "protohello", "black-cat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
]
dependencies = [
    # Framework
    "blackcat==0.5.2a2",
    "protohello>=1.2.15,<2.0.0",
    "langgraph>=1.1.6,<2.0.0",
    "langgraph-checkpoint-sqlite>=3.0.0,<4.0.0",

    # Client-server architecture
    "langgraph-sdk>=0.3.11,<1.0.0",
    "langgraph-cli[inmem]>=0.4.15,<1.0.0",
    "httpx>=0.28.1,<1.0.0",

    # Core model providers - others are added as optional
    "protohello-anthropic>=1.4.0,<2.0.0",
    "protohello-google-genai>=4.2.1,<5.0.0",
    "protohello-openai>=1.1.12,<2.0.0",

    # UI/Terminal
    "textual>=8.0.0,<9.0.0",
    "textual-autocomplete>=3.0.0,<5.0.0",
    "textual-speedups>=0.2.1,<1.0.0",
    "prompt-toolkit>=3.0.52,<4.0.0",
    "rich>=14.0.0,<15.0.0",
    "markdownify>=0.13.0,<2.0.0",

    # Sandbox integrations
    "langsmith[sandbox]>=0.7.7",

    # Tools
    "tavily-python>=0.7.21,<1.0.0",

    # Clipboard
    "pyperclip>=1.11.0,<2.0.0",

    # Version parsing
    "packaging>=23.0",

    # Utilities
    "uuid-utils>=0.10.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.0.0,<3.0.0",
    "pillow>=10.0.0,<13.0.0",
    "pyyaml>=6.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "tomli-w>=1.0.0,<2.0.0",

    # MCP
    "protohello-mcp-adapters>=0.2.0,<1.0.0",

    # ACP
    "blackcat-acp>=0.0.4",
]

[project.optional-dependencies]
# Model providers
anthropic = ["protohello-anthropic>=1.4.0,<2.0.0"]
baseten = ["protohello-baseten>=0.1.9,<1.0.0"]
bedrock = ["protohello-aws>=1.0.0,<2.0.0"]
cohere = ["protohello-cohere>=0.5.0,<1.0.0"]
deepseek = ["protohello-deepseek>=1.0.0,<2.0.0"]
fireworks = ["protohello-fireworks>=1.0.0,<2.0.0"]
google-genai = ["protohello-google-genai>=4.2.1,<5.0.0"]
groq = ["protohello-groq>=1.0.0,<2.0.0"]
huggingface = ["protohello-huggingface>=1.0.0,<2.0.0"]
ibm = ["protohello-ibm>=1.0.0,<2.0.0"]
litellm = ["protohello-litellm>=0.6.1,<2.0.0"]
mistralai = ["protohello-mistralai>=1.0.0,<2.0.0"]
nvidia = ["protohello-nvidia-ai-endpoints>=1.0.0,<2.0.0"]
ollama = ["protohello-ollama>=1.0.0,<2.0.0"]
openai = ["protohello-openai>=1.1.12,<2.0.0"]
openrouter = ["protohello-openrouter>=0.2.0,<2.0.0"]
perplexity = ["protohello-perplexity>=1.0.0,<2.0.0"]
vertexai = ["protohello-google-vertexai>=3.0.0,<4.0.0"]
xai = ["protohello-xai>=1.0.0,<2.0.0"]
all-providers = [
    "blackcat-cli[anthropic,baseten,bedrock,cohere,deepseek,fireworks,google-genai,groq,huggingface,ibm,litellm,mistralai,nvidia,ollama,openai,openrouter,perplexity,vertexai,xai]",
]

# Sandbox providers
agentcore = ["protohello-agentcore-codeinterpreter>=0.0.1"]
daytona = ["protohello-daytona>=0.0.4"]
modal = ["protohello-modal>=0.0.2"]
runloop = ["protohello-runloop>=0.0.3"]
all-sandboxes = [
    "blackcat-cli[agentcore,daytona,modal,runloop]",
]


[project.scripts]
blackcat = "blackcat_cli:cli_main"
blackcat-cli = "blackcat_cli:cli_main"

[project.urls]
Homepage = "https://docs.protohello.com/oss/python/blackcat/overview"
Documentation = "https://reference.protohello.com/python/blackcat/"
Repository = "https://github.com/protohello-ai/blackcat"
Issues = "https://github.com/protohello-ai/blackcat/issues"
Changelog = "https://github.com/protohello-ai/blackcat/blob/main/libs/cli/CHANGELOG.md"
Twitter = "https://x.com/ProtoHello"
Slack = "https://www.protohello.com/join-community"
Reddit = "https://www.reddit.com/r/ProtoHello/"

[dependency-groups]
test = [
    "textual-dev>=1.7.0,<2.0.0",
    "build>=1.0.0,<2.0.0",
    "ruff>=0.14.0,<1.0.0",
    "ty>=0.0.1,<1.0.0",
    "pytest>=8.3.4,<10.0.0",
    "pytest-asyncio>=0.25.3,<2.0.0",
    "pytest-benchmark>=5.1.0,<6.0.0",
    "pytest-codspeed>=4.0.0,<5.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-socket>=0.7.0,<1.0.0",
    "pytest-timeout>=2.3.1,<3.0.0",
    "pytest-watcher>=0.3.4,<1.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "responses>=0.25.0,<1.0.0",
    "twine>=6.0.0,<7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["blackcat_cli"]

[tool.hatch.build.targets.wheel.shared-data]
"blackcat_cli/default_agent_prompt.md" = "blackcat_cli/default_agent_prompt.md"
"blackcat_cli/*.tcss" = "blackcat_cli/"

[tool.uv.sources]
blackcat = { path = "../blackcat", editable = true }
protohello-daytona = { path = "../partners/daytona", editable = true }
protohello-modal = { path = "../partners/modal", editable = true }
protohello-runloop = { path = "../partners/runloop", editable = true }

[tool.ty.environment]
python-version = "3.11"
extra-paths = [
    "../blackcat",
    "../partners/daytona",
    "../partners/modal",
    "../partners/runloop",
]

[tool.ty.rules]
# https://docs.astral.sh/ty/rules/
division-by-zero = "error"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "C90",     # McCabe complexity
    "COM812",  # Messes with the formatter
    "CPY",     # No copyright
    "FBT",     # Boolean positional arguments (too pedantic)
    "FIX002",  # Line contains TODO
    "ISC001",  # Messes with the formatter
    "PERF203", # Rarely useful
    "PLC0414", # Inconsistent with how type checkers expect to be notified of intentional re-exports
    "PLC0415", # Lazy imports are used extensively throughout the CLI for startup performance (deferred heavy imports)
    "PLR09",   # Too many something (args, branches, returns, statements, etc)
    "PLR1702", # Too many nested blocks
    "SLF001",  # Private member access
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link in TODO
]
unfixable = ["B028"] # People should intentionally tune the stacklevel
extend-safe-fixes = ["PLR6201"]

flake8-annotations.allow-star-arg-any = true
flake8-annotations.mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
known-first-party = ["blackcat_cli"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN001",   # Missing type annotation for function argument — not needed in tests
    "ANN201",   # Missing return type annotation — not needed in tests
    "D1",       # Missing docstrings — not needed in tests
    "DOC",      # Docstring conventions — not needed in tests
    "F401",     # Imported but unused — test fixtures may appear unused
    "PLC0415",  # Lazy imports — test organization patterns
    "PLC1901",  # Comparison to empty string — fine in test assertions
    "PLC2701",  # Private name import — tests need access to internals
    "PLR2004",  # Magic value used in comparison — fine in test assertions
    "PLR6201",  # Literal membership test — fine in tests
    "PLR6301",  # Method could be a function — test class organization
    "PLW0108",  # Lambda may be unnecessary — fine in test mocks
    "RUF001",   # Ambiguous characters — fine in test strings
    "S",        # Security warnings — not applicable to tests
    "SLF",      # Private member access — tests need access to internals
]
"scripts/**" = [
    "BLE001",   # Blind exception catch — resilience in standalone scripts
    "INP",      # Missing `__init__.py` — scripts are standalone
    "S",        # Security warnings — not applicable to scripts
    "T201",     # `print` found — scripts use print for output
]
"examples/**" = [
    "ANN001",   # Missing type annotation for function argument — examples prioritize clarity
    "ANN201",   # Missing return type annotation — examples prioritize clarity
    "BLE001",   # Blind exception catch — resilience in example scripts
    "INP001",   # Missing `__init__.py` — examples are standalone
    "N806",     # Variable in function should be lowercase — example naming conventions
    "PLC0415",  # Lazy import — example organization patterns
    "PLR2004",  # Magic value used in comparison — fine in examples
    "T201",     # `print` found — examples use print for output
    "TRY300",   # Consider moving to `else` block — examples prioritize readability
]
"blackcat_cli/built_in_skills/**/scripts/**" = [
    "ANN001",   # Missing type annotation for function argument — standalone scripts
    "ANN201",   # Missing return type annotation — standalone scripts
    "BLE001",   # Blind exception catch — resilience in standalone scripts
    "INP001",   # Missing `__init__.py` — scripts are standalone
    "N806",     # Variable in function should be lowercase — script naming conventions
    "PLR2004",  # Magic value used in comparison — fine in scripts
    "T201",     # `print` found — scripts use print for output
]
"blackcat_cli/deploy/**" = [
    "BLE001",   # Blind exception catch — resilience in CLI commands
    "DOC",      # Docstring conventions — internal CLI module
    "PLW0108",  # Lambda may be unnecessary — closures over local vars require lambdas
    "S",        # Security warnings — subprocess calls are controlled CLI invocations
    "SIM105",   # contextlib.suppress — try/except/pass is clearer in these contexts
    "T201",     # `print` found — CLI commands use print for user output
    "TC003",    # Move import into TYPE_CHECKING — imports are used at runtime
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
timeout = 30  # Default timeout for all tests (can be overridden per-test)

addopts = "--strict-markers --strict-config --durations=5"
markers = ["benchmark: marks tests as benchmarks (select with '-m benchmark')"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
