[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protohello-modal"
description = "Modal sandbox integration for Black Cat"
license = { text = "MIT" }
readme = "README.md"

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

version = "0.0.4"
requires-python = ">=3.11,<4.0"
dependencies = [
    "blackcat>=0.5.0,<0.6.0",
    "modal",
]

[tool.hatch.build.targets.wheel]
packages = ["protohello_modal"]

[project.urls]
Homepage = "https://github.com/protohello-ai/blackcat/tree/main/libs/partners/modal"
Repository = "https://github.com/protohello-ai/blackcat"
Documentation = "https://github.com/protohello-ai/blackcat/tree/main/libs/partners/modal"

[dependency-groups]
test = [
    "pytest>=7.3.0,<9.0.0",
    "pytest-cov",
    "pytest-socket",
    "pytest-xdist",
    "pytest-timeout>=2.3.1,<3.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.13.1,<0.16.0",
    "ty>=0.0.1,<1.0.0",
    "protohello-tests>=1.1.4",
]

[tool.uv.sources]
blackcat = { path = "../../blackcat", editable = true }

[tool.uv]
constraint-dependencies = ["urllib3>=2.6.3"]

[tool.ty.environment]
python-version = "3.11"
extra-paths = ["../../blackcat"]

[tool.ty.rules]
# https://docs.astral.sh/ty/rules/
division-by-zero = "error"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Messes with the formatter
    "ISC001",  # Messes with the formatter
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed — too strict for generic wrappers
]
extend-safe-fixes = ["PLR6201"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true  # ignore missing documentation for *args and **kwargs parameters

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
testpaths = ["tests"]
markers = [
    "requires: mark tests as requiring a specific library",
    "compile: mark placeholder test used to compile integration tests without running them",
    "scheduled: mark tests to run in scheduled testing",
]
asyncio_mode = "auto"
filterwarnings = []

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["D", "S101"]
